# papa-events

./: README.md  pyproject.toml
.github/workflows/: lint-format-test.yml  release.yml
src/papa_events/: __init__.py  application.py  config.py  event.py  exceptions.py
tests/: conftest.py  test_decorator.py  test_events.py  test_failover.py  test_init.py  test_library.py  test_publish_events.py
